fix list type icons being too small on mobile

--- a/lunalux/static/css/lunalux.css
+++ b/lunalux/static/css/lunalux.css
@@ -1803,7 +1803,7 @@ section.newsletter .form>form button:hover {
           .col2 {
             flex: 0 0 90%;
             max-width: 90%;
-            margin-right: 1rem;
+            margin: 0 1.2rem;
           }
 
           .col2.large{
